[project]
name = "subnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "async-substrate-interface>=1.6.2",
    "bittensor>=10.1.0",
    "numpy>=1",
    "pydantic>=2",
    "pytest>=8",
    "python-dotenv>=1.2.2",
    "rich>=13",
    "setuptools>=68",
    "sqlalchemy>=2.0.0",
    "starlette>=0.30.0",
    "substrate-interface>=1.8.1",
    "torch>=2",
]
[tool.setuptools.packages.find]
include = ["tensorusd*", "neurons*"]
exclude = ["verify*", "contrib*"]
